--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,39 @@
 spring:
-  sql:
-    init:
-      mode: never
+  application:
+    name: book-management
 
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    defer-datasource-initialization: true
-
+  # H2 Database ??
   datasource:
-    url: jdbc:h2:mem:testdb
-    #url: jdbc:h2:tcp://localhost/~/dgsw22
-    #username: sa
+    url: jdbc:h2:mem:bookdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
 
+  # H2 Console ??
   h2:
     console:
       enabled: true
+      path: /h2-console
+
+  # JPA ??
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        use_sql_comments: true
+    defer-datasource-initialization: true
+
+  # SQL ???
+  sql:
+    init:
+      mode: always
+
+# ?? ??
+logging:
+  level:
+    com.bookmanagement: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
